# ai-agent

./: .env  README.md  mcp_client.py  postgres_server.py  pyproject.toml  weather_server.py
stdio/: child.py  echo_stdin.py  parent.py
