[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=0.3.24",
    "langchain-anthropic>=0.3.12",
    "langgraph>=0.3.33",
    "langsmith>=0.3.33",
    "mcp>=1.6.0",
    "openai>=1.76.0",
    "psycopg>=3.2.6",
    "python-dotenv>=1.1.0",
]
